<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_meal"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:alpha="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <TextView
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loren_ipson_1"
        android:textSize="25sp"
        android:fontFamily="@font/bodonimoda"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/lbl_result"
        android:paddingBottom="200dp">
    </TextView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_email"
        android:id="@+id/btn_voltar"
        android:text="@string/btn_voltar"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        ></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_email"
        app:layout_constraintStart_toEndOf="@id/btn_voltar"
        android:text="@string/btn_send_email"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>